<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.belki.citybike.CityBikeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/camera_banner"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/custom_white"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:gravity="center_vertical"
                android:text="@string/camera_banner_text"
                android:textAppearance="?textAppearanceBodyMedium"
                android:textColor="@color/custom_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="App can't determine your location" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/permit"
                android:textAppearance="@style/TextAppearance.CityBike.H3"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/message"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Allow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.budiyev.android.codescanner.CodeScannerView
            android:id="@+id/scanner_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:autoFocusButtonVisible="false"
            app:flashButtonColor="@color/custom_white"
            app:flashButtonPaddingHorizontal="16dp"
            app:flashButtonPaddingVertical="16dp"
            app:flashButtonPosition="topEnd"
            app:frameColor="@color/custom_white"
            app:frameCornersCapRounded="true"
            app:frameCornersRadius="16dp"
            app:frameCornersSize="60dp"
            app:frameSize="0.73"
            app:frameThickness="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_banner"
            app:maskColor="@color/mask_gray" />


        <ImageView
            android:id="@+id/close_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@null"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_banner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:background="@drawable/tooltip_background"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/camera_tooltip"
            android:textAppearance="?textAppearanceCaption"
            android:textColor="@color/custom_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>